--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "coveralls": "~2.10.0",
     "jostle": "~0.1.0",
     "mocha": "~1.18.2",
+    "mocha-lcov-reporter": "0.0.1",
     "should": "~3.3.1"
   },
   "scripts": {
