--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "cache-manager": "~0.5.0",
+    "debug": "~1.0.2",
     "sol-redis-pool": "~0.1.3"
   },
   "devDependencies": {
