--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "pooled redis caching made easy",
   "main": "index.js",
   "dependencies": {
-    "cache-manager": "git://github.com/evanlucas/node-cache-manager",
+    "cache-manager": "~0.8.0",
     "debug": "~1.0.2",
     "sol-redis-pool": "~0.1.3"
   },
